--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
+    "csurf": "^1.11.0",
     "dotenv": "^16.4.7",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.13.0",
